--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,18 @@ body > pre { display: none }
   top: 64px;
   margin: 0 auto;
   z-index: 999;
-  left: 0;
-  right: 0;
+  left: calc(50% - 110px);
   text-align: center;
+  padding: 10px;
+  border: 2px solid #dce4ec;
+  background: #f5f5f5;
+  border-radius: 5px;
+}
+
+#function-search .results .list-group-item {
+  cursor: pointer;
+}
+
+#function-search .results .list-group-item:not(.active):hover {
+  background-color: #e5e5e5;
 }
